mdapiEYH/objects/SBQQ__DiscountSchedule__c.object
<CustomObject>
    <customHelpPage>SBQQ__DiscountScheduleHelp</customHelpPage>
    <description>Volume discount schedule that applies automatic discounts based on quantity.</description>
    <label>Discount Schedule</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Compte auquel ce barème de remise s&apos;applique. Utilisé uniquement avec Remplacement du barème de remise dans l&apos;interface utilisateur de l&apos;éditeur de ligne de devis.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AggregationScope__c</fullName>
        <description>Indicates whether quote lines referencing this schedule should be aggregated within quote, group or not at all for the purposes of volume discount calculation.</description>
        <inlineHelpText>Spécifiez le mode d&apos;agrégation des quantités de ligne de devis pour les produits qui utilisent ce barème. Par défaut, la quantité de chaque ligne est considérée de façon indépendante (même pour un produit identique).</inlineHelpText>
        <label>Aggregation Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConstraintField__c</fullName>
        <description>For cross-order schedules, if you want to limit which subscriptions and assets are used to calculate your volume discounts, select the field that you want to match against the same field on the quote.</description>
        <inlineHelpText>Sélectionnez le champ que vous souhaitez comparer avec le même champ de devis.</inlineHelpText>
        <label>Constraint Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CrossOrders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether volume discount should be applied on combined quantities across prior orders.</description>
        <inlineHelpText>Sélectionnez la case si vous souhaitez étendre les remises sur volume au volume total appartenant à ce client (c.-à-d. la quantité du devis plus les achats antérieurs).</inlineHelpText>
        <label>Cross Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CrossProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether volume discount calculations should aggregate quantities of all products using this schedule.</description>
        <inlineHelpText>Sélectionnez la case pour agréger les quantités de tous les produits utilisant ce barème pour le calcul de remise sur volume. Les remises par palier ne peuvent être utilisées pour les remises sur les produits croisés.</inlineHelpText>
        <label>Cross Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this Discount Schedule.</description>
        <inlineHelpText>Description de ce barème de remise.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountUnit__c</fullName>
        <description>This is the Discount Unit for the Discount Schedule.</description>
        <inlineHelpText>Spécifier l&apos;unité de remise : Montant ou Pourcentage.</inlineHelpText>
        <label>Discount Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                    <default>true</default>
                    <label>Percent</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludedPricebookIds__c</fullName>
        <description>Comma-seperated list of price book IDs for which this discount schedule should not apply.</description>
        <inlineHelpText>Saisissez la liste des ID de catalogue de prix, séparés par une virgule, qui ne doivent pas s&apos;appliquer à ce barème de remise.</inlineHelpText>
        <label>Excluded Pricebook IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__IncludeBundledProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</description>
        <inlineHelpText>Si cette option est sélectionnée, les quantités des options de produits d&apos;offres groupées sont incluses dans l&apos;étendue d&apos;agrégation.</inlineHelpText>
        <label>Include Bundled Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order product that this discount schedule applies to.</description>
        <inlineHelpText>Produit commandé auquel ce barème de remise s&apos;applique.</inlineHelpText>
        <label>Order Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Order Products of the associated order.</errorMessage>
            <filterItems>
                <field>OrderItem.OrderId</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order that this discount schedule applies to.</description>
        <inlineHelpText>Commande à laquelle ce barème de remise s&apos;applique.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original Discount Schedule that was overridden to create this Discount Schedule.</description>
        <inlineHelpText>Le barème de remise d&apos;origine qui a été remplacé pour créer ce barème de remise.</inlineHelpText>
        <label>Original Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OverrideBehavior__c</fullName>
        <description>Determines if the current Discount Tier that the product falls within is editable, if all Discount Tiers are editable, or none.</description>
        <inlineHelpText>Détermine si le niveau de remise actuel auquel correspond le produit peut être modifié, si tous les niveaux de remise peuvent être modifiés ou si aucun niveau ne peut être modifié.</inlineHelpText>
        <label>Override Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Current Tier Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceScale__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Decimal places for prices produced by this discount schedule.</description>
        <inlineHelpText>Décimales des prix générés par ce barème de remise.</inlineHelpText>
        <label>Price Scale</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Catalogue de prix auquel ce barème de remise s&apos;applique. Utilisé uniquement en combinaison d&apos;une référence Produit pour attribuer un barème spécifique au produit/catalogue de prix.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that this discount schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Produit auquel ce barème de remise s&apos;applique. Utilisé uniquement en combinaison d&apos;une référence Catalogue de prix pour attribuer un barème spécifique au produit/catalogue de prix.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLineQuantityField__c</fullName>
        <description>Field used to calculate discount schedule pricing.</description>
        <inlineHelpText>Champ utilisé pour calculer la tarification du barème de remise.</inlineHelpText>
        <label>Quote Line Quantity Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
                <value>
                    <fullName>Custom_Quantity__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote Line that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Ligne de devis à laquelle ce barème de remise s&apos;applique. Utilisée uniquement en combinaison de Remplacement du barème de remise dans l&apos;interface utilisateur de l&apos;éditeur de ligne de devis.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Le devis auquel ce barème de remise s&apos;applique. Utilisé uniquement en combinaison de Remplacement du barème de remise dans l&apos;interface utilisateur de l&apos;éditeur de ligne de devis.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>The type of discount schedule determines how the discount is calculated.</description>
        <inlineHelpText>Sélectionnez le type de remise qui détermine la soustraction du montant ou des pourcentages du prix.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                    <default>true</default>
                    <label>Range</label>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UsePriceForAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the user defined Discount Schedule&apos;s Discount Unit will be set to Price.</description>
        <inlineHelpText>Si cette case est cochée, l&apos;unité de remise du barème défini par l&apos;utilisateur est définie sur le prix.</inlineHelpText>
        <label>Use Price For Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether this schedule was created by an end user or an admin.</description>
        <inlineHelpText>Identifie si ce barème a été créé par un utilisateur ou un administrateur.</inlineHelpText>
        <label>User Defined</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>